add documentation swagger for show
